have a nice day!

--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [颜智华：国共合作以共产党惨败收场（4）](../../pages/nsc1028/n13082967.md) 
 #### [颜智华：国共合作以共产党惨败收场（3）](../../pages/nsc1028/n13081595.md) 
 #### [袁斌：中共是全世界奉送领土最多的卖国党](../../pages/nsc1028/n13080359.md) 
 #### [颜智华：国共合作以共产党惨败收场（2）](../../pages/nsc1028/n13079964.md) 
@@ -29,7 +30,6 @@
 #### [共产党在中国城市发动“反帝”革命运动（上）](../../pages/nsc1028/n13050025.md) 
 #### [杨箭：百年中共的百年罪恶](../../pages/nsc1028/n13049996.md) 
 #### [周恩来下令杀顾顺章家十多人是怎么回事？](../../pages/nsc1028/n13049849.md) 
-#### [被遗忘的百年历史（VII） 1949至2020](../../pages/nsc1028/n13001762.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
