--- a/indexes/nsc993/56.md
+++ b/indexes/nsc993/56.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中国经济将进入深度衰退](../../pages/nsc993/n13082552.md) 
 #### [千百度：炫耀塔利班称中共是朋友  胡锡进被网友打脸](../../pages/nsc993/n13081538.md) 
 #### [金浴凤：浣溪沙·盼退休（外一篇）](../../pages/nsc993/n13081560.md) 
 #### [理悟：党民死结无解](../../pages/nsc993/n13081552.md) 
@@ -29,7 +30,6 @@
 #### [袁斌：中共百年党庆 网友批“虚假场景”](../../pages/nsc993/n13066385.md) 
 #### [理悟：百年“七一”追悼会](../../pages/nsc993/n13066106.md) 
 #### [关乐：一根拴驴橛 百年罪债锅](../../pages/nsc993/n13066089.md) 
-#### [【网海拾贝】中共将快乐建立在中国人民的痛苦上](../../pages/nsc993/n13064939.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
