--- a/indexes/nsc993/56.md
+++ b/indexes/nsc993/56.md
@@ -1,5 +1,10 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】全球主要国家对中共的印象有多差？](../../pages/nsc993/n13085788.md) 
+#### [蔡桂华：中共百年罪恶史的警告](../../pages/nsc993/n13085715.md) 
+#### [戈壁东：中共是这个世界最邪恶的政权](../../pages/nsc993/n13085641.md) 
+#### [千百度：网友吐槽大陆经济 “日子普遍难过”](../../pages/nsc993/n13085475.md) 
+#### [郑纯清：中共根早断](../../pages/nsc993/n13084579.md) 
 #### [【网海拾贝】中国经济将进入深度衰退](../../pages/nsc993/n13082552.md) 
 #### [千百度：炫耀塔利班称中共是朋友  胡锡进被网友打脸](../../pages/nsc993/n13081538.md) 
 #### [金浴凤：浣溪沙·盼退休（外一篇）](../../pages/nsc993/n13081560.md) 
@@ -25,11 +30,6 @@
 #### [【网海拾贝】中共百年大庆令人想到纳粹](../../pages/nsc993/n13068483.md) 
 #### [【投书】贱党伪业——写在中共建党100年](../../pages/nsc993/n13067843.md) 
 #### [【投书】中共百年党庆个屁——习近平将亡于黄文才之手？](../../pages/nsc993/n13067425.md) 
-#### [【网海拾贝】“七一讲话”预示中共执政路向](../../pages/nsc993/n13066434.md) 
-#### [千百度：梁健辉为何刺杀港警？网友披露内情](../../pages/nsc993/n13066979.md) 
-#### [袁斌：中共百年党庆 网友批“虚假场景”](../../pages/nsc993/n13066385.md) 
-#### [理悟：百年“七一”追悼会](../../pages/nsc993/n13066106.md) 
-#### [关乐：一根拴驴橛 百年罪债锅](../../pages/nsc993/n13066089.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
