have a nice day!

--- a/indexes/nsc1025/109.md
+++ b/indexes/nsc1025/109.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [田云：中共迫害法轮功22年 多少人被卷入罪恶](../../pages/nsc1025/n13087467.md) 
+#### [王友群：为什么我敢在中共监狱里跟江泽民“叫板”](../../pages/nsc1025/n13087285.md) 
+#### [王友群：我在中共监狱里致胡锦涛等的10封信](../../pages/nsc1025/n13084915.md) 
+#### [【名家专栏】制止中共大规模窃取基因数据](../../pages/nsc1025/n13086174.md) 
 #### [【名家专栏】中共为何没能力向海外出售战机](../../pages/nsc1025/n13086154.md) 
 #### [郝平：两项全球性研究揭示中国经济下行端倪](../../pages/nsc1025/n13086859.md) 
 #### [杨威：政治局常委会议不敢公开的诡异](../../pages/nsc1025/n13086672.md) 
@@ -26,10 +30,6 @@
 #### [袁斌：中共是全世界对环境破坏最大的祸国党](../../pages/nsc1025/n13081509.md) 
 #### [【名家专栏】中共控制了英国吗？](../../pages/nsc1025/n13080067.md) 
 #### [陈思敏：滴滴党庆日顶风赴美上市的三大蹊跷](../../pages/nsc1025/n13080910.md) 
-#### [中美军力对比 差距到底多大（五）](../../pages/nsc1025/n13080052.md) 
-#### [杜耀明：武夫当道  特区强权政治变本加厉](../../pages/nsc1025/n13080333.md) 
-#### [谢田：碳定价碳税的左右搏击与大国博弈](../../pages/nsc1025/n13080309.md) 
-#### [周晓辉：滴滴下架等三大案背后疑涉高层权斗](../../pages/nsc1025/n13079332.md) 
 
 ---
-#### 第 [ [108](./108.md) / [107](./107.md) / [106](./106.md) / [105](./105.md) / [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) ] 页
+#### 第 [ [109](./109.md) / [108](./108.md) / [107](./107.md) / [106](./106.md) / [105](./105.md) / [104](./104.md) / [103](./103.md) / [102](./102.md) ] 页
