--- a/indexes/nsc993/56.md
+++ b/indexes/nsc993/56.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】新华社代表中共给塔利班支招](../../pages/nsc993/n13087892.md) 
 #### [【网海拾贝】全球主要国家对中共的印象有多差？](../../pages/nsc993/n13085788.md) 
 #### [蔡桂华：中共百年罪恶史的警告](../../pages/nsc993/n13085715.md) 
 #### [戈壁东：中共是这个世界最邪恶的政权](../../pages/nsc993/n13085641.md) 
@@ -29,7 +30,6 @@
 #### [海阔天空——香港⼈·不羁放纵爱⾃由](../../pages/nsc993/n13069407.md) 
 #### [【网海拾贝】中共百年大庆令人想到纳粹](../../pages/nsc993/n13068483.md) 
 #### [【投书】贱党伪业——写在中共建党100年](../../pages/nsc993/n13067843.md) 
-#### [【投书】中共百年党庆个屁——习近平将亡于黄文才之手？](../../pages/nsc993/n13067425.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
