--- a/indexes/nsc993/56.md
+++ b/indexes/nsc993/56.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [千百度：广西禁家人未接种疫苗学生入学惹众怒](../../pages/nsc993/n13090506.md) 
+#### [【网海拾贝】无视中共是自由社会最大危险](../../pages/nsc993/n13089767.md) 
 #### [【网海拾贝】新华社代表中共给塔利班支招](../../pages/nsc993/n13087892.md) 
 #### [【网海拾贝】全球主要国家对中共的印象有多差？](../../pages/nsc993/n13085788.md) 
 #### [蔡桂华：中共百年罪恶史的警告](../../pages/nsc993/n13085715.md) 
@@ -28,8 +30,6 @@
 #### [【投书】一个民营企业家的维权故事](../../pages/nsc993/n13070932.md) 
 #### [李春草：瑞鹧鸪 · 以“复兴”的名义](../../pages/nsc993/n13069984.md) 
 #### [海阔天空——香港⼈·不羁放纵爱⾃由](../../pages/nsc993/n13069407.md) 
-#### [【网海拾贝】中共百年大庆令人想到纳粹](../../pages/nsc993/n13068483.md) 
-#### [【投书】贱党伪业——写在中共建党100年](../../pages/nsc993/n13067843.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
