--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [颜智华：落草为寇的朱毛为何能立足并壮大（1）](../../pages/nsc1028/n13093178.md) 
+#### [中共罪行录之三十五：乡村大游斗     ](../../pages/nsc1028/n13093007.md) 
 #### [中共罪行录之三十四：大饥荒时代的悲惨故事](../../pages/nsc1028/n13087993.md) 
 #### [王友群：北京大学教授王重民文革中悬梁自尽](../../pages/nsc1028/n13084645.md) 
 #### [颜智华：国共合作以共产党惨败收场（4）](../../pages/nsc1028/n13082967.md) 
@@ -28,8 +30,6 @@
 #### [【中共党史】苏联扶共侵华阴谋的大揭发](../../pages/nsc1028/n13056050.md) 
 #### [【百年透视】中共暴政的杀人历史](../../pages/nsc1028/n13051791.md) 
 #### [颜智华：共产主义是国际恐怖主义](../../pages/nsc1028/n13052583.md) 
-#### [中共罪行录之三十三：钦州剖腹食肝风](../../pages/nsc1028/n13050342.md) 
-#### [共产党在中国城市发动“反帝”革命运动（上）](../../pages/nsc1028/n13050025.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
