--- a/indexes/nsc993/57.md
+++ b/indexes/nsc993/57.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】谭德塞：中国应交出原始数据](../../pages/nsc993/n13095308.md) 
+#### [千百度：美军机再次降落台湾 中共打嘴炮遭网友讥讽](../../pages/nsc993/n13095250.md) 
 #### [【网海拾贝】美中脱钩 谁的损失更大？](../../pages/nsc993/n13093068.md) 
 #### [李心：从周易看“躺平”二字蕴含的玄机](../../pages/nsc993/n13091424.md) 
 #### [千百度：广西禁家人未接种疫苗学生入学惹众怒](../../pages/nsc993/n13090506.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】中共之中国与韭菜何干？](../../pages/nsc993/n13075428.md) 
 #### [【网海拾贝】如果习仲勋现在还活着](../../pages/nsc993/n13073410.md) 
 #### [林泉：CCP及其百年后](../../pages/nsc993/n13073226.md) 
-#### [【网海拾贝】除了暴力谎言，中共还剩什么？](../../pages/nsc993/n13071082.md) 
-#### [【投书】一个民营企业家的维权故事](../../pages/nsc993/n13070932.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
