--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [颜智华：共产党在苏区的烧杀抢反人类犯罪（1）](../../pages/nsc1028/n13096652.md) 
+#### [中共罪行录之三十七：卫生纸之祸](../../pages/nsc1028/n13096576.md) 
 #### [中共罪行录之三十六：西藏的文革惨剧](../../pages/nsc1028/n13095149.md) 
 #### [颜智华：落草为寇的朱毛武装为什么能立足并壮大（2）](../../pages/nsc1028/n13095103.md) 
 #### [颜智华：落草为寇的朱毛为何能立足并壮大（1）](../../pages/nsc1028/n13093178.md) 
@@ -28,8 +30,6 @@
 #### [袁斌：中共是全世界杀人最多的刽子手党](../../pages/nsc1028/n13059947.md) 
 #### [【中共党史】中共武装割据中的苏联军援](../../pages/nsc1028/n13058998.md) 
 #### [【百年透视】中共是全世界最大的卖国党](../../pages/nsc1028/n13014567.md) 
-#### [【百年透视】中共摧毁传统文化与道德](../../pages/nsc1028/n13057253.md) 
-#### [【中共党史】苏联扶共侵华阴谋的大揭发](../../pages/nsc1028/n13056050.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
