have a nice day!

--- a/indexes/nsc1025/111.md
+++ b/indexes/nsc1025/111.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】纳瓦罗：美反击中共不公平竞争](../../pages/nsc1025/n13102316.md) 
 #### [【纪元专栏】经济应是下届加拿大联邦大选首要议题](../../pages/nsc1025/n13102373.md) 
 #### [周晓辉：中共真的不怕鬼？党魁最信最怕](../../pages/nsc1025/n13101845.md) 
 #### [【有冇搞错】中国足球？上帝都哭了！](../../pages/nsc1025/n13101161.md) 
@@ -29,7 +30,6 @@
 #### [王友群：财政吃紧？中共仍疯狂挥霍百姓血汗钱](../../pages/nsc1025/n13096172.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13096298.md) 
 #### [王赫：中共对法轮功的迫害为何能持续22年？](../../pages/nsc1025/n13096044.md) 
-#### [程晓农：中共警卫局换马之壸奥](../../pages/nsc1025/n13095911.md) 
 
 ---
-#### 第 [ [110](./110.md) / [109](./109.md) / [108](./108.md) / [107](./107.md) / [106](./106.md) / [105](./105.md) / [104](./104.md) / [103](./103.md) ] 页
+#### 第 [ [111](./111.md) / [110](./110.md) / [109](./109.md) / [108](./108.md) / [107](./107.md) / [106](./106.md) / [105](./105.md) / [104](./104.md) ] 页
