--- a/indexes/nsc424/46.md
+++ b/indexes/nsc424/46.md
@@ -1,5 +1,6 @@
 ### 纪元评论：纪元特稿
 ---
+#### [【特稿】善与恶的较量 记法轮功反迫害22年](../../pages/nsc424/n13086597.md) 
 #### [【新年寄语】大疫前明真相辨善恶 选未来](../../pages/nsc424/n12660855.md) 
 #### [【新年寄语】大疫前明真相辨善恶 选未来](../../pages/nsc424/n12660855.md) 
 #### [【特稿】伸张正义 行总统特权 拯救美国](../../pages/nsc424/n12616806.md) 
@@ -28,7 +29,6 @@
 #### [【特稿】欢迎举报江泽民等人权恶棍美国资产](../../pages/nsc424/n11303040.md) 
 #### [【特稿】中共覆灭在即 勿依赖中共保权](../../pages/nsc424/n11278510.md) 
 #### [【特稿】中共覆灭在即 勿依赖中共保权](../../pages/nsc424/n11278510.md) 
-#### [【特稿】天命昭昭 美国觉醒 共产末日近](../../pages/nsc424/n11150259.md) 
 #### [【特稿】天命昭昭 美国觉醒 共产末日近](../../pages/nsc424/n11150259.md) 
 
 ---
