--- a/indexes/nsc993/57.md
+++ b/indexes/nsc993/57.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [7.20反迫害22年 纪念中国女画家艾欣](../../pages/nsc993/n13100071.md) 
+#### [【网海拾贝】中共做成的每件大事都从欺骗开始](../../pages/nsc993/n13101163.md) 
 #### [浩然：在中共大使馆前的演讲](../../pages/nsc993/n13098467.md) 
 #### [光明：解析中共](../../pages/nsc993/n13099934.md) 
 #### [【网海拾贝】 渐行渐近的文革2.0](../../pages/nsc993/n13099588.md) 
@@ -28,8 +30,6 @@
 #### [九天剑：习总不自信 源头看猪](../../pages/nsc993/n13081197.md) 
 #### [千百度：患者开颅中唱红歌？网友：恶心](../../pages/nsc993/n13080377.md) 
 #### [【网海拾贝】国际社会对台态度改变出乎中共预料](../../pages/nsc993/n13080968.md) 
-#### [【投书】卡尔：希望国际社会关注中国职校学生人权情况](../../pages/nsc993/n13080410.md) 
-#### [【网海拾贝】欧洲议会将通过动议抵制北京冬奥会](../../pages/nsc993/n13078156.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
