--- a/indexes/nsc1026/51.md
+++ b/indexes/nsc1026/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [【美股瞭望】Delta疫情冲击股市 或让通胀降温](../../pages/nsc1026/n13100297.md) 
 #### [陈思敏：数据之外 中国经济放缓压力有多大？](../../pages/nsc1026/n13085576.md) 
 #### [专栏作家：投资中企风险难测 华尔街终觉醒](../../pages/nsc1026/n13079366.md) 
 #### [【美股瞭望】商品行情崩挫 科技股重回主流](../../pages/nsc1026/n13029798.md) 
@@ -29,7 +30,6 @@
 #### [数据派：中国资产预警之地产危局](../../pages/nsc1026/n12490884.md) 
 #### [【美股瞭望】选前通过纾困案恐是假议题](../../pages/nsc1026/n12487724.md) 
 #### [陈思敏：十一黄金周消费揭“国内大循环”虚实](../../pages/nsc1026/n12468798.md) 
-#### [陈思敏：中国经济“内虚” 北京楼市一叶知秋](../../pages/nsc1026/n12464918.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
