--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：第一个挨整的中共元帅刘伯承](../../pages/nsc1028/n13099858.md) 
+#### [中共罪行录之三十九：一声口哨一条命](../../pages/nsc1028/n13101149.md) 
+#### [颜智华：共产党在苏区的烧杀抢反人类犯罪（2）](../../pages/nsc1028/n13101108.md) 
 #### [中共罪行录之三十八：现代“窦娥冤”](../../pages/nsc1028/n13099553.md) 
 #### [颜智华：共产党在苏区的烧杀抢反人类犯罪（1）](../../pages/nsc1028/n13096652.md) 
 #### [中共罪行录之三十七：卫生纸之祸](../../pages/nsc1028/n13096576.md) 
@@ -27,9 +30,6 @@
 #### [【百年透视】教科书里谎言知多少？](../../pages/nsc1028/n13064563.md) 
 #### [【网海拾贝】中共的本质是两面派的骗子](../../pages/nsc1028/n13062711.md) 
 #### [袁斌：中共是全世界最爱撒谎的骗子党](../../pages/nsc1028/n13062650.md) 
-#### [被遗忘的百年历史（VIII）1949至2020](../../pages/nsc1028/n13048188.md) 
-#### [袁斌：中共是全世界杀人最多的刽子手党](../../pages/nsc1028/n13059947.md) 
-#### [【中共党史】中共武装割据中的苏联军援](../../pages/nsc1028/n13058998.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
