--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [颜智华：中原大战结束 为何共产党还能在赣南闽西折腾4年](../../pages/nsc1028/n13103846.md) 
+#### [中共罪行录之四十：滴血的手指头](../../pages/nsc1028/n13103760.md) 
 #### [王友群：第一个挨整的中共元帅刘伯承](../../pages/nsc1028/n13099858.md) 
 #### [中共罪行录之三十九：一声口哨一条命](../../pages/nsc1028/n13101149.md) 
 #### [颜智华：共产党在苏区的烧杀抢反人类犯罪（2）](../../pages/nsc1028/n13101108.md) 
@@ -28,8 +30,6 @@
 #### [【百年透视】剖析中共洗脑术](../../pages/nsc1028/n13064830.md) 
 #### [袁斌：中共是全世界最野蛮霸道的强盗党](../../pages/nsc1028/n13064758.md) 
 #### [【百年透视】教科书里谎言知多少？](../../pages/nsc1028/n13064563.md) 
-#### [【网海拾贝】中共的本质是两面派的骗子](../../pages/nsc1028/n13062711.md) 
-#### [袁斌：中共是全世界最爱撒谎的骗子党](../../pages/nsc1028/n13062650.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
