have a nice day!

--- a/indexes/nsc1025/111.md
+++ b/indexes/nsc1025/111.md
@@ -1,5 +1,16 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：郑州暴雨打乱中南海攻台阵脚？](../../pages/nsc1025/n13107542.md) 
+#### [陈思敏：李克强“数学是一切科学的基础”之说的背后](../../pages/nsc1025/n13106800.md) 
+#### [韦拓：桂冠落地 北京鄙视诺贝尔奖得主](../../pages/nsc1025/n13105038.md) 
+#### [千百度：郑州洪灾 水淹地铁 是天灾还是人祸？](../../pages/nsc1025/n13106544.md) 
+#### [周晓辉：刚批欧洲体制失败 郑州暴雨打脸北京](../../pages/nsc1025/n13105396.md) 
+#### [清竹：法轮功学员的反迫害开创了历史的先河](../../pages/nsc1025/n13106082.md) 
+#### [韦拓：美军撤离阿富汗 “好朋友”塔利班或变中共噩梦](../../pages/nsc1025/n13092357.md) 
+#### [钟原：中共高层为何不能“靠前指挥”抗灾](../../pages/nsc1025/n13105767.md) 
+#### [王友群：“天价维稳费”说明了什么？](../../pages/nsc1025/n13105267.md) 
+#### [杨威：美中外交接触一波三折谁尴尬](../../pages/nsc1025/n13105348.md) 
+#### [张菁：网红们高调爱国的背后](../../pages/nsc1025/n13105246.md) 
 #### [1999年上亿人炼法轮功 如今这些人在哪？](../../pages/nsc1025/n13104698.md) 
 #### [夏林：突然快速增长的通货膨胀 是从哪里来的？](../../pages/nsc1025/n13104887.md) 
 #### [王友群：中共外部环境更恶化的九大表现](../../pages/nsc1025/n13103354.md) 
@@ -19,17 +30,6 @@
 #### [田云：武汉遭强拆户怒杀中共官员 悲剧敲警钟](../../pages/nsc1025/n13100648.md) 
 #### [任重：优步有样 特斯拉学不学？](../../pages/nsc1025/n13099953.md) 
 #### [【名家专栏】只靠钱 中国足球无法取胜](../../pages/nsc1025/n13095631.md) 
-#### [【名家专栏】微芯片：中共最薄弱的软肋](../../pages/nsc1025/n13099425.md) 
-#### [李正宽：22年中的党媒宣传VS真实的法轮功](../../pages/nsc1025/n13099206.md) 
-#### [“东升西降”一枕黄粱，末路狂奔下场可料](../../pages/nsc1025/n13099711.md) 
-#### [【名家专栏】学校性教育背后的极权主义议程](../../pages/nsc1025/n13095647.md) 
-#### [觅真：立即停止这场血腥的屠戮和残酷的迫害！](../../pages/nsc1025/n13098079.md) 
-#### [清竹：中共为什么要毁灭中国人的信仰](../../pages/nsc1025/n13098007.md) 
-#### [项云：中共一直宣传“为民”你能信吗？](../../pages/nsc1025/n13097942.md) 
-#### [粟沂州：对山东蒙阴县孙丕进冤死案的评析](../../pages/nsc1025/n13097836.md) 
-#### [郝平：美智库揭秘中共国防军购三大短版](../../pages/nsc1025/n13097489.md) 
-#### [金言：共产党与法轮功到底谁怕谁？](../../pages/nsc1025/n13097720.md) 
-#### [唐青：官位不对等 中美闹外交纠纷](../../pages/nsc1025/n13097723.md) 
 
 ---
 #### 第 [ [111](./111.md) / [110](./110.md) / [109](./109.md) / [108](./108.md) / [107](./107.md) / [106](./106.md) / [105](./105.md) / [104](./104.md) ] 页
