--- a/indexes/nsc993/57.md
+++ b/indexes/nsc993/57.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】灾害凸显中共对民众的极端冷漠](../../pages/nsc993/n13106600.md) 
+#### [数据派：中国人需要“境外敌对势力”来维护尊严](../../pages/nsc993/n13106141.md) 
 #### [【网海拾贝】五十年代“公私合营”再现中国](../../pages/nsc993/n13104069.md) 
 #### [吐为快：拆江山](../../pages/nsc993/n13103889.md) 
 #### [云鹤天：雄安新区](../../pages/nsc993/n13103872.md) 
@@ -28,8 +30,6 @@
 #### [千百度：网友吐槽大陆经济 “日子普遍难过”](../../pages/nsc993/n13085475.md) 
 #### [郑纯清：中共根早断](../../pages/nsc993/n13084579.md) 
 #### [【网海拾贝】中国经济将进入深度衰退](../../pages/nsc993/n13082552.md) 
-#### [千百度：炫耀塔利班称中共是朋友  胡锡进被网友打脸](../../pages/nsc993/n13081538.md) 
-#### [金浴凤：浣溪沙·盼退休（外一篇）](../../pages/nsc993/n13081560.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
