--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [苏晓康：垮坝](../../pages/nsc1028/n13109759.md) 
+#### [颜智华：“剿共战争”成派系斗争筹码 红军逃生作乱  ](../../pages/nsc1028/n13109642.md) 
 #### [中共罪行录之四十一：剃光头也有罪](../../pages/nsc1028/n13107819.md) 
 #### [颜智华：中原大战结束 为何共产党还能在赣南闽西折腾4年](../../pages/nsc1028/n13103846.md) 
 #### [中共罪行录之四十：滴血的手指头](../../pages/nsc1028/n13103760.md) 
@@ -28,8 +30,6 @@
 #### [韩亦言：中国共产党的初心是什么？](../../pages/nsc1028/n13065420.md) 
 #### [【百年透视】抗击中共为何成为国际潮流？](../../pages/nsc1028/n13065845.md) 
 #### [【百年透视】中共为祸百年的深层原因](../../pages/nsc1028/n13065827.md) 
-#### [【百年透视】剖析中共洗脑术](../../pages/nsc1028/n13064830.md) 
-#### [袁斌：中共是全世界最野蛮霸道的强盗党](../../pages/nsc1028/n13064758.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
