--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友琴：文革猛于虎——记文革受难者张为申和谢瑞瑾](../../pages/nsc1028/n13111808.md) 
 #### [苏晓康：垮坝](../../pages/nsc1028/n13109759.md) 
 #### [颜智华：“剿共战争”成派系斗争筹码 红军逃生作乱  ](../../pages/nsc1028/n13109642.md) 
 #### [中共罪行录之四十一：剃光头也有罪](../../pages/nsc1028/n13107819.md) 
@@ -29,7 +30,6 @@
 #### [王友群：出席中共一大的15人的最后结局](../../pages/nsc1028/n13067282.md) 
 #### [韩亦言：中国共产党的初心是什么？](../../pages/nsc1028/n13065420.md) 
 #### [【百年透视】抗击中共为何成为国际潮流？](../../pages/nsc1028/n13065845.md) 
-#### [【百年透视】中共为祸百年的深层原因](../../pages/nsc1028/n13065827.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
