have a nice day!

--- a/indexes/nsc1026/51.md
+++ b/indexes/nsc1026/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [善如：华尔街的野性与彪悍](../../pages/nsc1026/n13112664.md) 
 #### [【谈股论金】国际油价80美元或成近年天花板](../../pages/nsc1026/n13108524.md) 
 #### [【美股瞭望】Delta疫情冲击股市 或让通胀降温](../../pages/nsc1026/n13100297.md) 
 #### [陈思敏：数据之外 中国经济放缓压力有多大？](../../pages/nsc1026/n13085576.md) 
@@ -29,7 +30,6 @@
 #### [【名家专栏】通货膨胀不是一项社会政策](../../pages/nsc1026/n12528711.md) 
 #### [【财经话题】美国大选后股市行情可期](../../pages/nsc1026/n12514949.md) 
 #### [数据派：中国资产预警之地产危局](../../pages/nsc1026/n12490884.md) 
-#### [【美股瞭望】选前通过纾困案恐是假议题](../../pages/nsc1026/n12487724.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
