have a nice day!

--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之四十三：名字惹的祸](../../pages/nsc1028/n13115989.md) 
 #### [王友群：被整得最惨的中共元帅彭德怀](../../pages/nsc1028/n13112821.md) 
 #### [中共罪行录之四十二：语录对错招来祸](../../pages/nsc1028/n13113015.md) 
 #### [王友琴：文革猛于虎——记文革受难者张为申和谢瑞瑾](../../pages/nsc1028/n13111808.md) 
@@ -29,7 +30,6 @@
 #### [【中共党史】中共武装割据中的“红色基因”](../../pages/nsc1028/n13074576.md) 
 #### [共产党在中国城市发动“反帝”革命运动（下）](../../pages/nsc1028/n13076119.md) 
 #### [袁斌：中共是全世界最残暴无道的独裁党](../../pages/nsc1028/n13068366.md) 
-#### [王友群：出席中共一大的15人的最后结局](../../pages/nsc1028/n13067282.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
